Mudança de diretório, novas funcionalidades e página de cadastro e login feito.

--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="pt-br">
 
 <head>
     <meta charset="UTF-8">
@@ -10,8 +10,9 @@
     <meta name="robots" content="">
     <meta name="author" content="">
     <link rel="icon" href="">
-    <link rel="stylesheet" href="../public/style.css">
-    <script src="https://kit.fontawesome.com/11a0ae1d38.js" crossorigin="anonymous"></script>
+    <!--<link rel="stylesheet" href="public/style.css">-->
+    <link href="css/style.css" rel="stylesheet">
+
     <title>Início</title>
 </head>
 
@@ -20,7 +21,7 @@
         <header>
             <nav id="nav-principal">
                 <nav id="nav-info-perfil">
-                    <a href="#"><img src="../../image/images/perfil.jpg" alt="" id="imagem-perfil"></a>
+                    <a href="#"><img src="image/images/perfil.jpg" alt="" id="imagem-perfil"></a>
                     <a href="#"><span class="caveat">Roberto Designer</span></a>
                 </nav>
 
@@ -83,21 +84,21 @@
             <h3>Últimos Projetos</h3>
             <section>
                 <article>
-                    <img src="../../image/images/exemplo-projeto.jpg" alt="">
+                    <img src="image/images/exemplo-projeto.jpg" alt="">
                     <p>
                         Projeto 1
                     </p>
                 </article>
 
                 <article>
-                    <img src="../../image/images/exemplo-projeto.jpg" alt="">
+                    <img src="image/images/exemplo-projeto.jpg" alt="">
                     <p>
                         Projeto 2
                     </p>
                 </article>
 
                 <article>
-                    <img src="../../image/images/exemplo-projeto.jpg" alt="">
+                    <img src="image/images/exemplo-projeto.jpg" alt="">
                     <p>
                         Projeto 3
                     </p>
