--- a/app/views/index.html
+++ b/app/views/index.html
@@ -25,27 +25,27 @@
                     <nav id="nav-menu-desktop">
                         <ul id="menu-desktop">
                             <li>
-                                <span id="contatos" class="itens-menu"><i class="far fa-comments"></i></span>
-                                <ul id="subMenu-contatos">
+                                <span id="contatos" class="itens-menu" onmouseover="mostrarContatos(); esconderHamburguer(); esconderConfiguracoes()"><i class="far fa-comments"></i></span>
+                                <ul id="subMenu-contatos"  onmouseover="mostrarContatos()" onmouseout="esconderContatos()">
                                     <li><a href="#">Whatsapp</a></li>
                                     <li><a href="#">E-mail</a></li>
                                     <li><a href="#">Telefone</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <span id="configuracoes" class="itens-menu"><i class="fas fa-cog"></i></span>
-                                <ul id="subMenu-configuracoes">
+                                <span id="configuracoes" class="itens-menu" onmouseover="mostrarConfiguracoes(); esconderHamburguer(); esconderContatos()"><i class="fas fa-cog"></i></span>
+                                <ul id="subMenu-configuracoes" onmouseover="mostrarConfiguracoes()" onmouseout="esconderConfiguracoes()">
                                     <li><a href="#">Tema claro</a></li>
                                     <li><a href="#">Tema Escuro</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <div id="menu-hamburguer">
+                                <div id="menu-hamburguer" onmouseover="mostrarHamburguer(); esconderContatos(); esconderConfiguracoes()">
                                     <div id="primeira-barra"></div>
                                     <div id="segunda-barra"></div>
                                     <div id="terceira-barra"></div>
                                 </div>
-                                <ul id="subMenu-hamburguer">
+                                <ul id="subMenu-hamburguer" onmouseover="mostrarHamburguer()" onmouseout="esconderHamburguer()">
                                     <li><a href="#">Sobre mim</a></li>
                                     <li><a href="#">Serviços</a></li>
                                 </ul>
@@ -107,5 +107,6 @@
                 <h2>Desenvolvido por Roberto - 2021</h2>
             </footer>
         </div>
+        <script src="../public/script.js"></script>
     </body>
 </html>
