--- a/app/views/servicos.html
+++ b/app/views/servicos.html
@@ -10,8 +10,9 @@
         <meta name="author" content="">
         <link rel="icon" href="">
         <link rel="stylesheet" href="../public/css/style.css">
+        <link rel="stylesheet" href="../public/css/servicos.css">
         <script src="https://kit.fontawesome.com/11a0ae1d38.js" crossorigin="anonymous"></script>
-        <title>Início</title>
+        <title>Serviços</title>
     </head>
     <body>
         <div id="grid">
@@ -46,7 +47,7 @@
                                 </div>
                                 <ul id="subMenu-hamburguer" onmouseover="mostrarHamburguer()" onmouseout="esconderHamburguer()">
                                     <li><a href="#">Sobre mim</a></li>
-                                    <li><a href="servicos.html">Serviços</a></li>
+                                    <li><a href="#">Serviços</a></li>
                                 </ul>
                             </li> 
                         </ul>
@@ -73,31 +74,21 @@
             </header>
             <main>
                 <hgroup>
-                    <h1>Saudações!</h1>
-                    <h2>Espero que goste dos projetos, e que eu possa realizar essa grande etapa de sua vida.</h2>
+                    <h1>Serviços</h1>
+                    <h2>Atualmente faço</h2>
                 </hgroup>
-
-                <h3>Últimos Projetos</h3>
                 <section>
-                    <article>
-                        <img src="../public/image/images/exemplo-projeto.jpg" alt="">
-                        <p>
-                            Projeto 1
-                        </p>
-                    </article>
-
-                    <article>
-                        <img src="../public/image/images/exemplo-projeto.jpg" alt="">
-                        <p>
-                            Projeto 2
-                        </p>
-                    </article>
-                    <article>
-                        <img src="../public/image/images/exemplo-projeto.jpg" alt="">
-                        <p>
-                            Projeto 3
-                        </p>
-                    </article>
+                        <article>
+                            <p>- Banners</p>
+                            <p>- Cartões de visita</p>
+                            <p>- Artes digitais</p>
+                            <p>- Pacote mensal de artes</p>
+                        </article>
+                        <article>
+                            <p>- Flyers</p>
+                            <p>- Cartaz</p>
+                            <p>- Convites e mais</p>
+                        </article>
                 </section>
             </main>
             <footer>
