Adicionado página sobre mim

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -62,7 +62,7 @@
                                 <li><a href="#">E-mail</a></li>
                                 <li><a href="#">Telefone</a></li>
                             </ul>
-                            <li><a href="#">Serviços</a></li>
+                            <li><a href="servicos.html">Serviços</a></li>
                             <ul>
                                 <li><a href="#">Tema claro</a></li>
                                 <li><a href="#">Tema Escuro</a></li>
