--- a/app/views/sobre_mim.html
+++ b/app/views/sobre_mim.html
@@ -10,7 +10,7 @@
         <meta name="author" content="">
         <link rel="icon" href="">
         <link rel="stylesheet" href="../public/css/style.css">
-        <link rel="stylesheet" href="../public/css/servicos.css">
+        <link rel="stylesheet" href="../public/css/sobre_mim.css">
         <script src="https://kit.fontawesome.com/11a0ae1d38.js" crossorigin="anonymous"></script>
         <title>Serviços</title>
     </head>
@@ -46,7 +46,7 @@
                                     <div id="terceira-barra"></div>
                                 </div>
                                 <ul id="subMenu-hamburguer" onmouseover="mostrarHamburguer()" onmouseout="esconderHamburguer()">
-                                    <li><a href="sobre_mim.html">Sobre mim</a></li>
+                                    <li><a href="#">Sobre mim</a></li>
                                     <li><a href="servicos.html">Serviços</a></li>
                                 </ul>
                             </li> 
@@ -56,7 +56,7 @@
                     <nav id="nav-menu-mobile">
                         <span>Menu</span>
                         <ul>
-                            <li><a href="sobre_mim.html">Sobre mim</a></li>
+                            <li><a href="#">Sobre mim</a></li>
                             <li><a href="#">Contatos</a></li>
                             <ul>
                                 <li><a href="#">Whatsapp</a></li>
@@ -73,23 +73,14 @@
                 </nav>
             </header>
             <main>
-                <hgroup>
-                    <h1>Serviços</h1>
-                    <h2>Atualmente faço</h2>
-                </hgroup>
-                <section>
-                        <article>
-                            <p>- Banners</p>
-                            <p>- Cartões de visita</p>
-                            <p>- Artes digitais</p>
-                            <p>- Pacote mensal de artes</p>
-                        </article>
-                        <article>
-                            <p>- Flyers</p>
-                            <p>- Cartaz</p>
-                            <p>- Convites e mais</p>
-                        </article>
-                </section>
+                <h1>Sobre mim</h1>
+                <article>
+                    <p>
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. 
+                        Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                    </p>
+                </article>
             </main>
             <footer>
                 <span id="copyright">&copy;</span>
