--- a/app/views/administrar.html
+++ b/app/views/administrar.html
@@ -57,7 +57,7 @@
         <input type="submit" value="Enviar projeto">
     </form>
 
-    <button><a href="/admin ">Voltar</a></button>
+    <button><a href="/admin/sair ">Sair</a></button>
 
 
 </body>
