--- a/app/views/index.ejs
+++ b/app/views/index.ejs
@@ -12,6 +12,8 @@
     <link rel="icon" href="">
     <!--<link rel="stylesheet" href="public/style.css">-->
     <link href="css/style.css" rel="stylesheet">
+    <!-- link para carregara as fontes-->
+    <script src="https://kit.fontawesome.com/11a0ae1d38.js" crossorigin="anonymous"></script>
 
     <title>Início</title>
 </head>
@@ -28,27 +30,28 @@
                 <nav id="nav-menu-desktop">
                     <ul id="menu-desktop">
                         <li>
-                            <span id="contatos" class="itens-menu"><i class="far fa-comments"></i></span>
-                            <ul id="subMenu-contatos">
+                            <span id="contatos" class="itens-menu" onmouseover="mostrarContatos(); esconderHamburguer(); esconderConfiguracoes()" onmouseout="timeContatos()"><i class="far fa-comments"></i></span>
+                            <ul id="subMenu-contatos" onmouseover="mostrarContatos()" onmouseout="esconderContatos()">
                                 <li><a href="#">Whatsapp</a></li>
                                 <li><a href="#">E-mail</a></li>
                                 <li><a href="#">Telefone</a></li>
                             </ul>
                         </li>
                         <li>
-                            <span id="configuracoes" class="itens-menu"><i class="fas fa-cog"></i></span>
-                            <ul id="subMenu-configuracoes">
+                            <span id="configuracoes" class="itens-menu" onmouseover="mostrarConfiguracoes(); esconderHamburguer(); esconderContatos()" onmouseout="timeConfiguracoes()"><i class="fas fa-cog"></i></span>
+                            <ul id="subMenu-configuracoes" onmouseover="mostrarConfiguracoes()" onmouseout="esconderConfiguracoes()">
                                 <li><a href="#">Tema claro</a></li>
                                 <li><a href="#">Tema Escuro</a></li>
                             </ul>
                         </li>
                         <li>
-                            <div id="menu-hamburguer">
+                            <div id="menu-hamburguer" onmouseover="mostrarHamburguer(); esconderContatos(); esconderConfiguracoes()" onmouseout="timeHamburguer()">
                                 <div id="primeira-barra"></div>
                                 <div id="segunda-barra"></div>
                                 <div id="terceira-barra"></div>
                             </div>
-                            <ul id="subMenu-hamburguer">
+                            <!-- Criar rota para abrir página de serviços-->
+                            <ul id="subMenu-hamburguer" onmouseover="mostrarHamburguer()" onmouseout="esconderHamburguer()">
                                 <li><a href="#">Sobre mim</a></li>
                                 <li><a href="#">Serviços</a></li>
                             </ul>
@@ -56,6 +59,7 @@
                     </ul>
                 </nav>
 
+                <!-- Preciso criar uma rota para renderizar a página de serviços-->
                 <nav id="nav-menu-mobile">
                     <span>Menu</span>
                     <ul>
@@ -109,6 +113,7 @@
             <span id="copyright">&copy;</span>
             <h2>Desenvolvido por Roberto - 2021</h2>
         </footer>
+        <script src="js/script.js"></script>
     </div>
 </body>
 
