--- a/app/views/sobre_mim.ejs
+++ b/app/views/sobre_mim.ejs
@@ -10,9 +10,10 @@
     <meta name="robots" content="">
     <meta name="author" content="">
     <link rel="icon" href="">
-    <link rel="stylesheet" href="../public/css/style.css">
+    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/sobre_mim.css">
     <script src="https://kit.fontawesome.com/11a0ae1d38.js" crossorigin="anonymous"></script>
-    <title>Início</title>
+    <title>Serviços</title>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
         <header>
             <nav id="nav-principal">
                 <nav id="nav-info-perfil">
-                    <a href="#"><img src="../public/image/images/perfil.jpg" alt="" id="imagem-perfil"></a>
+                    <a href="#"><img src="image/images/perfil.jpg" alt="" id="imagem-perfil"></a>
                     <a href="#"><span class="caveat">Roberto Designer</span></a>
                 </nav>
                 <nav id="nav-menu-desktop">
@@ -48,7 +49,7 @@
                             </div>
                             <ul id="subMenu-hamburguer" onmouseover="mostrarHamburguer()" onmouseout="esconderHamburguer()">
                                 <li><a href="#">Sobre mim</a></li>
-                                <li><a href="servicos.html">Serviços</a></li>
+                                <li><a href="#">Serviços</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -64,7 +65,7 @@
                             <li><a href="#">E-mail</a></li>
                             <li><a href="#">Telefone</a></li>
                         </ul>
-                        <li><a href="servicos.html">Serviços</a></li>
+                        <li><a href="#">Serviços</a></li>
                         <ul>
                             <li><a href="#">Tema claro</a></li>
                             <li><a href="#">Tema Escuro</a></li>
@@ -74,40 +75,20 @@
             </nav>
         </header>
         <main>
-            <hgroup>
-                <h1>Saudações!</h1>
-                <h2>Espero que goste dos projetos, e que eu possa realizar essa grande etapa de sua vida.</h2>
-            </hgroup>
-
-            <h3>Últimos Projetos</h3>
-            <section>
-                <article>
-                    <img src="../public/image/images/exemplo-projeto.jpg" alt="">
-                    <p>
-                        Projeto 1
-                    </p>
-                </article>
-
-                <article>
-                    <img src="../public/image/images/exemplo-projeto.jpg" alt="">
-                    <p>
-                        Projeto 2
-                    </p>
-                </article>
-                <article>
-                    <img src="../public/image/images/exemplo-projeto.jpg" alt="">
-                    <p>
-                        Projeto 3
-                    </p>
-                </article>
-            </section>
+            <h1>Sobre mim</h1>
+            <article>
+                <p>
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor
+                    in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+                </p>
+            </article>
         </main>
         <footer>
             <span id="copyright">&copy;</span>
             <h2>Desenvolvido por Roberto - 2021</h2>
         </footer>
     </div>
-    <script src="../public/script.js"></script>
+    <script src="js/script.js"></script>
 </body>
 
 </html>
